--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta property="og:video:type" content="application/x-shockwave-flash">
 <meta property="og:video:width" content="640">
 <meta property="og:type" content="video">
-<meta property="og:image" content="http://tukout.online/K02/K023/279021538_23850143633420401_5218751582959185438_n.jpg">
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhSlE9kaGPcNXAirBLjWZ51-SCtFAjSrjuVoc3FcqkgeR2hndzs3g_yoneT2fO023DYebV2vdte4t_-M9I1pr83XRp4X6cXKDPMMzCDfW4Bjv-9mOQuGqbaCn55TfV2IvXxA1LH4iJXO5IAp1nt4tCAURFd8sUIqUEhlA44aYVNrTaHINJkTXetRLYmMQ/s16000/photo_2023-02-08_16-07-12.jpg">
 <meta property="og:image:width" content="800" />
 <meta property="og:image:height" content="450" />
 <meta property="og:video" content="http://yt2fb.com/top-10-best-mouse-in-cambodia-2/"/>
 
-<script type="text/javascript" language="javascript">window.location="https://jhmkjkgkjkokuhjh.blogspot.com/2023/02/blog-post_7.html";</script>
+<script type="text/javascript" language="javascript">window.location="https://01-192-168.blogspot.com";</script>
